Corregí los comentarios, la descripción de las imágenes y añadí el link a los iconos de la página

--- a/peliculas.html
+++ b/peliculas.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/img/peliculas-series/img-logo.png" alt="logo-pag"
+            <a class="navbar-brand" href="/index.html"><img src="/img/peliculas-series/img-logo.png" alt="logo-pag"
                     width="200px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -72,7 +72,7 @@
             <div class="row ">
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-principales/deadpool-2.webp" alt="">
+                        <img src="img/peliculas-series/pelis-principales/deadpool-2.webp" alt="img-pelicula">
                         <div class="card_body  dark  d-flex flex-column">
                             <h2 class="card_title">DeadPool 2</h2>
                             <p class="card_info">Tras sobrevivir a un ataque bovino casi mortal, un distinguido chef de
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/ant-man-wasp.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/ant-man-wasp.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">Ant-man and Wasp</h2>
                             <p class="card_info">Scott Lang vuelve a enfundarse el traje de Ant-Man para pelear codo con
@@ -115,7 +115,7 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/avatar.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/avatar.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">Avatar</h2>
                             <p class="card_info">Jake Sully, un exinfante de marina, usa un Avatar para moverse por
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/capitan-america.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/capitan-america.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">Capitan America</h2>
                             <p class="card_info">Steve Rogers quiere ser soldado, pero siempre es rechazado. Finalmente,
@@ -144,7 +144,7 @@
             <div class="row justify-content-center align-items-center ">
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/dia-de-la-independencia.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/dia-de-la-independencia.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">Dia de la Independencia</h2>
                             <p class="card_info">Una flota de naves espaciales ataca la Tierra el 4 de julio,
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/rapido-furioso.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/rapido-furioso.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">Rapido y Furioso</h2>
                             <p class="card_info">Dom Toretto y sus familias se enfrentan al peor enemigo imaginable, uno
@@ -199,7 +199,7 @@
         <div class="contenedor_footer container-fluid d-flex bg-dark flex-column">
             <div class="row justify-content-center align-items-center w-100 p-2">
                 <div class="col-12 col-md-6 col-lg-3 text-center">
-                    <img src="/img/peliculas-series/img-logo.png" alt="" width="200px">
+                    <img src="/img/peliculas-series/img-logo.png" alt="img-logo" width="200px">
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 text-center">
                     <a class="icon_footer" href="error404.html"><i class="fa-brands fa-instagram fa-xl"></i></a>
