--- a/peliculas2.html
+++ b/peliculas2.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/img/peliculas-series/img-logo.png" alt="logo-pag"
+            <a class="navbar-brand" href="/index.html"><img src="/img/peliculas-series/img-logo.png" alt="logo-pag"
                     width="200px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/enemigo-publico.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/enemigo-publico.webp" alt="img-pelicula">
                         <div class="card_body  dark  d-flex flex-column">
                             <h2 class="card_title">Enemigo Publico</h2>
                             <p class="card_info">Un abogado se convierte en el objetivo de un político corrupto y de sus
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/proyecto-geminis.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/proyecto-geminis.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">Proyecto geminis</h2>
                             <p class="card_info">Henry Bogan, un asesino a sueldo, pretende retirarse porque se siente
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/john-carter.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/john-carter.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">John Carter</h2>
                             <p class="card_info">John Carter, un veterano de la Guerra Civil norteamericana, es
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/los-4-fantastico.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/los-4-fantastico.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">Los 4 Fantasticos</h2>
                             <p class="card_info">Durante un viaje espacial, cuatro astronautas se exponen a una extraña
@@ -130,7 +130,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/rapidos-furiosos-2.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/rapidos-furiosos-2.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">Rapido y Furioso 2</h2>
                             <p class="card_info">El expolicía Brian O'Conner y su amigo Roman Pearce vuelven al mundo de
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
                     <div class="card">
-                        <img src="img/peliculas-series/pelis-accion/cuidado-bebe-suelto.webp" alt="">
+                        <img src="img/peliculas-series/pelis-accion/cuidado-bebe-suelto.webp" alt="img-pelicula">
                         <div class="card_body dark d-flex flex-column">
                             <h2 class="card_title">Cuidado bebe suelto</h2>
                             <p class="card_info">Unos granujas secuestran al hijo de una adinerada familia de Chicago
@@ -184,7 +184,7 @@
         <div class="contenedor_footer container-fluid d-flex bg-dark flex-column">
             <div class="row justify-content-center align-items-center w-100 p-2">
                 <div class="col-12 col-md-6 col-lg-3 text-center">
-                    <img src="/img/peliculas-series/img-logo.png" alt="" width="200px">
+                    <img src="/img/peliculas-series/img-logo.png" alt="img-logo" width="200px">
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 text-center">
                     <a class="icon_footer" href="error404.html"><i class="fa-brands fa-instagram fa-xl"></i></a>
