--- a/detalleSerie-episodios-2.html
+++ b/detalleSerie-episodios-2.html
@@ -21,7 +21,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/img/peliculas-series/img-logo.png" alt="logo-pag"
+            <a class="navbar-brand" href="/index.html"><img src="/img/peliculas-series/img-logo.png" alt="logo-pag"
                     width="200px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -70,7 +70,6 @@
                     <p class="">SERIE <b>HD</b> · 2021-2023 · 2 temporadas · Ciencia ficcion,Fantasía </p>
                     <p class="carousel_desc">El volátil villano Loki (Tom Hiddleston) retoma su papel como el Dios de las Mentiras.</p>
                     <div class="botones d-flex ">
-                         <!--  <button class="carousel_boton btn btn-light btn-lg m-1">VER AHORA</button> -->
                          <a class="carousel_boton btn btn-light btn-lg m-1" href="/error404.html">VER AHORA</a>
                     </div>
                 </div>
